MenuHeader spacing fix

--- a/src/components/MenuHeader.scss
+++ b/src/components/MenuHeader.scss
@@ -1,6 +1,6 @@
 .p-menu-header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   padding: $padding-default;
   overflow: hidden;
 
